src/kubernetes/webapp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: webapp
spec:
    # use ClusterIP with ingress
    type: ClusterIP
    ports:
    # service listens on http (80)
    - port: 8080
    # sends to a pod on port 8080
      targetPort: 3006
    selector:
        app: webapp
